# job-search-app-coursework

./: .gitignore  README.md  app.py  implemented.py  old_app.py  optimize_data.json  pyproject.toml  requirements.txt  text_messages.json
api/: abs_api.py  hh_api.py  superjob_api.py
model/: vacancies.py
storage/: json_handler.py
