[tool.poetry]
name = "russian-platform-vacancies-coursework"
version = "0.1.0"
description = ""
authors = ["TheFimerHub <m.stepanov@it-park.tech>"]
readme = "README.md"
packages = [{include = "russian_platform_vacancies_coursework"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
markdown = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
